# bpt

./: .gitignore  AUTHORS  Makefile.am  README.fdf  TODO  add.c  append.c  bf.1  bf.c  configure  configure.ac  extract.c  filesize.c  find_duplicate_files.c  find_long_lines.c  find_odd_indentation.c  find_unique_files.c  genman.c  genutil.c  gint.c  mpp.c  nitfind.c  nitpick.c  reformat.c  spaces.c  tcg.1  tcg.c  typesafe.c  vbf.c
dup/: dupdate.c  dupfind.c
find_unused_headers_src/: file.c  file.h  main.c  misc.h  standard_headers.c
