AC_PREREQ(2.57)
AC_INIT(Bjorns Power Tools, 1.0.0, bjorn.augestad@gmail.com)
AC_CONFIG_AUX_DIR([extras])
AC_CONFIG_MACRO_DIR([extras])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([tcg.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
#AC_CHECK_LIB([highlander], [http_server_new])
#AC_CHECK_LIB([pthread], [pthread_create])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
